<resources>
    <string name="app_name">DecideHelper</string>
    <string name="already_have_an_account_label">Уже есть акккаунт?</string>
    <string name="enter_login_label">Войти</string>
    <string name="facebook_app_id">4448756398474544</string>
    <string name="fb_login_protocol_scheme">fb4448756398474544</string>
    <string name="e_mail_hint">Ваш E-mail</string>
    <string name="reg_label">Регистрация</string>
    <string name="password_hint">Придумайте пароль…</string>
    <string name="submit_pass_hint">Подвердите пароль…</string>
    <string name="login_label">Вход в аккаунт</string>
    <string name="enter_password_hint">Ваш пароль…</string>
    <string name="auth_label">Войти</string>
    <string name="already_not_have_account">Всё еще нет аккаунта?</string>
    <string name="create_account_label">Создать</string>
    <string name="name_hint">Ваше имя или никнейм…</string>
    <string name="my_tasks_option">Мои задачи</string>
    <string name="completed_tasks_option">Сделанные задачи</string>
    <string name="main_label"><![CDATA[За & против\n Помощник решить]]></string>
    <string name="add_task_label">Добавление задачи</string>
    <string name="task_title_hint">Заголовок задачи…</string>
    <string name="pros_label">За</string>
    <string name="cons_label">Против</string>
    <string name="monetary_equals_label">Монетарный эквивалент</string>
    <string name="add_task_btn_label">Добавить задачу</string>
    <string name="add_friend_hint">Добавить друга</string>
    <string name="night_theme_option">Тёмная тема</string>
    <string name="invite_option">Пригласить друга</string>
    <string name="rate_app_option">Оценить приложение</string>
    <string name="open_drawer">Открыть</string>
    <string name="close_drawer">Закрыть</string>
    <string name="error_add_friends_toast">Не получилось добавить ваших друзей :(</string>
    <string name="add_friends_success_toast">Друзья успешно добавлены!</string>
    <string name="reg_with_phone">Регистрация по телефону</string>
    <string name="phone_hint">Введите ваш номер телефона…</string>
    <string name="send_code_label">Отправить код</string>
    <string name="register_hint_default_code">Введите код из сообщения…</string>
    <string name="enter_code_label">Введите код…</string>
    <string name="edit_task_label">Редактирование</string>
    <string name="edit_task">Подтвердить</string>
    <string name="delete_tasks_label">Сделанные задачи</string>
    <string name="delete_all_tasks_label">Удалить все задачи</string>
    <string name="cancel_label">Отменить</string>
    <string name="delete_note_label">Удалить</string>
    <string name="are_you_sure_delete_note_message">Вы точно хотите удалить \n все выполненные задачи?</string>
    <string-array name="days">
        <item>1 день</item>
        <item>2 дня</item>
        <item>10 дней</item>
        <item>15 дней</item>
        <item>30 дней</item>
        <item>Никогда</item>
    </string-array>

    <!-- admob test id's -->

    <string name="app_id">ca-app-pub-3940256099942544~3347511713</string>
    <string name="main_banner">ca-app-pub-3940256099942544/6300978111</string>
    <string name="dark_theme_label">Тёмная тема</string>
    <string name="subscription_buy_label">Оформить подписку</string>
    <string name="ke">MIIBIjANBgkqhkiG9w0BAQEFAAOCAQ8AMIIBCgKCAQEApT+Qc+iXroB06WxDpy8ASvmIyhbhIi5P+KbTTyGX3S/WtlmQ442I4AKtKdRU+rJKrfroQTPhRAoNGxhyhJyk/AQSAae2M2sRmoPxeRFTLAdOnKmdpghITQ2bRcflgFVIONLnLDIzmUniCCJ3TA8xX3AM9sdjo62wMKr1XdYAx28y6DOs8wEntdihtB0veRm/rpYyv2hO50GynnbfO9pOtKMH7ufL+fDCMtgqYyhszFXI5h6dkHzLJB8rSDcUkNmd4QGUd9FxNYgH2t7veylFFkfF0AC6XwtIcSAb7Dm6JXWoiD+kHwcacc5GXW4ijsPCEUiVOk9bJ7NJ4JXuvkLNEwIDAQAB</string>
    <string name="auto_delete_label">Все задачи автоматически \n удаляются через...</string>
    <string name="close_drawer_label">Свернуть меню</string>
    <string name="sub_cancelled">Подписка отменена</string>
    <string name="sub_in_process">Покупка находится в процессе. Пожалуйста, завершите транзакцию</string>
    <string name="sub_confirmed">Подписка успешно оформлена! Перезапустите приложение!</string>
    <string name="error_invalid_sub">Ошибка - невалидная покупка</string>
    <string name="subs_not_supported">Извините, подписки не подерживаются. Пожалуйста, обновите Google Play Store.</string>
    <string name="sub_not_found">Подписка не найдена :(</string>
    <string name="enter_title_of_task">Введите заголовок задачи!</string>

    <!-- admob active id's -->
    <!--    <string name="app_id">ca-app-pub-7780453585001831~7171495897</string>-->
    <!--    <string name="main_banner">ca-app-pub-7780453585001831/9414515858</string>-->
</resources>