<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottom_sheet"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="100dp"
    android:paddingBottom="100dp"
    app:behavior_hideable="true"
    app:behavior_peekHeight="0dp"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <com.google.android.gms.ads.AdView
        ads:layout_constraintTop_toTopOf="parent"
        ads:layout_constraintStart_toStartOf="parent"
        ads:layout_constraintEnd_toEndOf="parent"
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/main_banner">
    </com.google.android.gms.ads.AdView>

    <TextView
        android:id="@+id/dec_add_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/fira_sans_medium"
        android:text="@string/add_task_label"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/close_bottom_sheet"
        app:layout_constraintTop_toBottomOf="@id/adView" />

    <ImageView
        android:id="@+id/close_bottom_sheet"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="60dp"
        android:src="@drawable/ic_close"
        app:layout_constraintBottom_toBottomOf="@id/dec_add_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/gray_3" />

    <EditText
        android:id="@+id/et_task_title"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="60dp"
        android:background="@drawable/edit_text_back"
        android:gravity="start"
        android:hint="@string/task_title_hint"
        android:padding="20dp"
        android:textColorHint="@android:color/black"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dec_add_label" />

    <Button
        android:id="@+id/pros_btn"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/ripple_pros"
        android:fontFamily="@font/fira_sans_regular"
        android:gravity="center"
        android:padding="15dp"
        android:text="@string/pros_label"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@id/et_task_title"
        app:layout_constraintTop_toBottomOf="@id/et_task_title" />

    <Button
        android:id="@+id/cons_btn"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/ripple_cons"
        android:fontFamily="@font/fira_sans_regular"
        android:gravity="center"
        android:padding="15dp"
        android:text="@string/cons_label"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@id/pros_btn"
        app:layout_constraintTop_toBottomOf="@id/et_task_title" />

    <TextView
        android:id="@+id/seek_hint_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/fira_sans_medium"
        android:text="@string/monetary_equals_label"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@id/et_task_title"
        app:layout_constraintTop_toBottomOf="@id/pros_btn" />

    <com.jaygoo.widget.RangeSeekBar
        app:layout_constraintTop_toBottomOf="@id/seek_hint_label"
        android:id="@+id/weight_seek_bar"
        app:layout_constraintStart_toStartOf="@id/pros_btn"
        app:layout_constraintEnd_toEndOf="@id/cons_btn"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        app:rsb_gravity="bottom"
        app:rsb_mode="single"
        app:rsb_progress_color="@color/colorAccent"
        app:rsb_step_auto_bonding="true"
        app:rsb_step_color="@color/colorAccent"
        app:rsb_step_height="10dp"
        app:rsb_step_width="5dp"
        app:rsb_steps="10"
        app:rsb_min="0"
        app:rsb_max="10"
        app:rsb_thumb_drawable="@drawable/thumb_colourful"
        app:rsb_tick_mark_gravity="center"
        app:rsb_tick_mark_layout_gravity="bottom"
        app:rsb_tick_mark_mode="number" />

    <Button
        android:id="@+id/btn_add_task"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="60dp"
        android:background="@drawable/ripple_cons"
        android:fontFamily="@font/fira_sans_medium"
        android:gravity="center"
        android:padding="18dp"
        android:text="@string/add_task_btn_label"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/weight_seek_bar" />

</androidx.constraintlayout.widget.ConstraintLayout>