<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottom_sheet"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="100dp"
    android:paddingBottom="100dp"
    app:behavior_hideable="true"
    app:behavior_peekHeight="0dp"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <com.google.android.gms.ads.AdView
        ads:layout_constraintTop_toTopOf="parent"
        ads:layout_constraintStart_toStartOf="parent"
        ads:layout_constraintEnd_toEndOf="parent"
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/main_banner">
    </com.google.android.gms.ads.AdView>

    <TextView
        android:id="@+id/dec_add_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/fira_sans_medium"
        android:text="@string/delete_tasks_label"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@id/close_bottom_sheet"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/adView" />

    <ImageView
        android:id="@+id/close_bottom_sheet"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="60dp"
        android:src="@drawable/ic_close"
        app:layout_constraintBottom_toBottomOf="@id/dec_add_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/dec_add_label"
        app:tint="@color/gray_3" />

    <Button
        android:id="@+id/delete_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_back_green"
        android:fontFamily="@font/fira_sans_regular"
        android:gravity="center"
        android:padding="15dp"
        android:text="@string/delete_all_tasks_label"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/auto_delete_days_spinner" />

    <TextView
        android:id="@+id/delete_auto_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/auto_delete_label"
        android:fontFamily="@font/fira_sans_bold"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:layout_marginStart="60dp"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/dec_add_label"
        app:layout_constraintStart_toStartOf="parent" />

    <Spinner
        android:id="@+id/auto_delete_days_spinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:padding="8dp"
        android:paddingStart="8dp"
        app:layout_constraintEnd_toEndOf="@id/close_bottom_sheet"
        app:layout_constraintStart_toStartOf="@id/delete_auto_label"
        android:background="@drawable/spinner_back"
        android:entries="@array/days"
        app:layout_constraintTop_toBottomOf="@id/delete_auto_label"
        tools:ignore="RtlSymmetry" />

</androidx.constraintlayout.widget.ConstraintLayout>