<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottom_sheet"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="100dp"
    android:paddingBottom="100dp"
    app:behavior_hideable="true"
    app:behavior_peekHeight="0dp"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <com.google.android.gms.ads.AdView
        ads:layout_constraintTop_toTopOf="parent"
        ads:layout_constraintStart_toStartOf="parent"
        ads:layout_constraintEnd_toEndOf="parent"
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/main_banner">
    </com.google.android.gms.ads.AdView>

    <TextView
        android:id="@+id/dec_add_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/fira_sans_medium"
        android:text="@string/edit_task_label"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/close_bottom_sheet"
        app:layout_constraintTop_toBottomOf="@id/adView" />

    <ImageView
        android:id="@+id/close_bottom_sheet"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="60dp"
        android:src="@drawable/ic_close"
        app:layout_constraintBottom_toBottomOf="@id/dec_add_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/gray_3" />

    <EditText
        android:id="@+id/et_task_title"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="60dp"
        android:background="@drawable/edit_text_back"
        android:gravity="start"
        android:hint="@string/task_title_hint"
        android:padding="20dp"
        android:textColorHint="@android:color/black"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dec_add_label" />


    <LinearLayout
        android:id="@+id/layout_note_color"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@id/et_task_title"
        app:layout_constraintStart_toStartOf="@id/et_task_title"
        app:layout_constraintTop_toBottomOf="@id/et_task_title"
        tools:ignore="DisableBaselineAlignment">

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <View
                android:id="@+id/view_color_1"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@drawable/background_note_color_1" />

            <ImageView
                android:id="@+id/image_color_1"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:padding="5dp"
                android:src="@drawable/ic_done"
                app:tint="@color/black" />

        </FrameLayout>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <View
                android:id="@+id/view_color_2"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@drawable/background_note_color_2" />

            <ImageView
                android:id="@+id/image_color_2"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:padding="5dp"
                app:tint="@color/black" />

        </FrameLayout>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <View
                android:id="@+id/view_color_3"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@drawable/background_note_color_3" />

            <ImageView
                android:id="@+id/image_color_3"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:padding="5dp"
                app:tint="@color/black" />

        </FrameLayout>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <View
                android:id="@+id/view_color_4"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@drawable/background_note_color_4" />

            <ImageView
                android:id="@+id/image_color_4"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:padding="5dp"
                app:tint="@color/black" />

        </FrameLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btn_edit_task"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="60dp"
        android:background="@drawable/btn_back_pink"
        android:fontFamily="@font/fira_sans_medium"
        android:gravity="center"
        android:padding="18dp"
        android:text="@string/edit_task"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_note_color" />

</androidx.constraintlayout.widget.ConstraintLayout>